# kube-autotuner

./: .gitignore  .lefthook.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yaml  flake.nix  pyproject.toml
src/kube_autotuner/: __init__.py  __main__.py  analysis.py  cli.py  experiment.py  models.py  optimizer.py  plots.py  progress.py  report.py  runs.py  scoring.py  subproc.py  trial_log.py  units.py
src/kube_autotuner/benchmark/: client_spec.py  diagnostics.py  errors.py  fortio_client_spec.py  fortio_parser.py  fortio_server_spec.py  iperf_parser.py  manifests.py  parser.py  patch.py  runner.py  server_spec.py
src/kube_autotuner/k8s/: client.py  lease.py  templates.py
src/kube_autotuner/report/: __init__.py  analysis.py  render.py
src/kube_autotuner/sysctl/: backend.py  fake.py  params.py  setter.py  talos.py
src/kube_autotuner/templates/: lease.yaml  sysctl_setter.yaml
tests/: test_aggregate_by_parent.py  test_aggregate_verification.py  test_analysis.py  test_cli.py  test_cli_collect_host_state.py  test_cli_refinement_flags.py  test_cli_verification_flags.py  test_client_spec.py  test_effective_phase.py  test_experiment.py  test_fortio_client_spec.py  test_fortio_parser.py  test_fortio_server_spec.py  test_host_state_parser.py  test_iperf_parser.py  test_k8s_client.py  test_lease.py  test_legacy_sidecar_compat.py  test_manifests.py  test_models.py  test_optimizer.py  test_parser.py  test_patch.py  test_plots.py  test_progress.py  test_report.py  test_report_host_state.py  test_resume_mixed_jsonl.py  test_resume_mixed_trials.py  test_run_refinement.py  test_run_refinement_dropout_no_more_samples.py  test_run_refinement_new_entrant.py  test_run_refinement_regression_fix.py  test_run_refinement_resume_midround.py  test_run_refinement_stranded_log_once.py  test_run_refinement_topk_shift.py  test_run_refinement_total_budget.py  test_run_verification.py  test_runner.py  test_runner_sync.py  (+13 more)
tests/fixtures/: analyze_sample.jsonl  experiment_example.yaml
tests/integration/: README.md  conftest.py  test_analyze_e2e.py  test_baseline_e2e.py  test_benchmark_runner.py  test_k8s_client_basic.py  test_kubectl_basic.py  test_lease.py  test_optimize_e2e.py  test_sysctl_e2e.py  test_sysctl_setter.py  test_trial_e2e.py
